# notebook-sydney-speaks

./: Untitled.ipynb  downloader.ipynb  postBuild  pyproject.toml  requirements.txt
binder/: postBuild  requirements.txt
jupyter-config/jupyter_server_config.d/: appmode.json
