[project]
name = "notebook-sydney-speaks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "appmode>=1.1.0",
    "ipywidgets>=8.1.8",
    "ldaca",
    "pyrfc6266>=1.0.2",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
ldaca = { git = "https://github.com/Language-Research-Technology/ldaca-py", branch = "pandas-3" }
